# qbit

./: .gitattributes  .gitignore  .semgrepignore  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md
.github/rulesets/: 0.1.x.json  1.0.0.json  1.x.x.json  release-tags-v-creation.json  release-tags-v-immutability.json
.github/workflows/: ci-nightly-heavy.yml  ci.yml  core-checks.yml  ibd-perf-manual.yml  lint-image-prewarm.yml  release-publish.yml  required-merge-gate.yml  rpc-docs-pages.yml  rpc-perf-manual.yml
ci/: install-perf-dependencies.sh  lint_imagefile  test_imagefile
ci/checks/: classify_merge_profile.py  test_classify_merge_profile.py  test_configure_docker_buildkit_config.py  test_libbitcoinpqc_build_policy.py
ci/libbitcoinpqc/: avx2-backend-harness.c  collect-tsan-evidence.sh  evidence-helpers.sh  lowcap-failure-fuzz-harness.c  tsan-concurrency-harness.c  upstream-extended-fuzz-harness.c
ci/release/: mainnet_ci_posture.json  test_publish_local_release.py  test_validate_builder_attestations.py  test_validate_key_metadata.py  test_validate_release_artifacts.py  test_verify_mainnet_ci_posture.py  test_verify_mainnet_release_posture.py  test_verify_p2mr_v1_conformance.py  validate_builder_attestations.py  validate_key_metadata.py  validate_release_artifacts.py  verify_mainnet_ci_posture.py  verify_mainnet_release_posture.py  verify_p2mr_v1_conformance.py
ci/scanners/: README.md  gitleaks-allowlist.toml  install-scanner-tools.sh  run-scanners.py  test_run_scanners.py
ci/test/: 00_setup_env.sh  00_setup_env_arm.sh  00_setup_env_base_image.sh  01_base_install.sh  (+21 more)
cmake/: bitcoin-build-config.h.in  libbitcoinpqc.cmake  windows-app.manifest.in
contrib/: README.md  valgrind.supp
contrib/photon/: CMakeLists.txt  RUNBOOK.md  relay-node.service  relay.conf.example
contrib/photon/bench/: fec_bench.cpp
contrib/photon/src/: CMakeLists.txt  app.cpp  app.h  clock.h  config.cpp  config.h  fec.cpp  fec.h  log_rate_limiter.h  logging.h  main.cpp  peer_manager.cpp  peer_manager.h  protocol.cpp  protocol.h  relay_engine.cpp  relay_engine.h  rpc_client.cpp  rpc_client.h  scheduler.cpp  scheduler.h  udp_transport.cpp  udp_transport.h  version.h.in  zmq_listener.cpp  zmq_listener.h
contrib/photon/test/: CMakeLists.txt  config_tests.cpp  fibre_fec_tests.cpp  main_tests.cpp  peer_manager_tests.cpp  protocol_tests.cpp  relay_engine_tests.cpp  rpc_client_tests.cpp  scheduler_tests.cpp  test_harness.h  udp_transport_tests.cpp  zmq_listener_tests.cpp
contrib/photon/test/fuzz/: CMakeLists.txt  fibre_protocol.cpp
contrib/testgen/p2mr_v1_oracle/: Cargo.toml  README.md
contrib/testgen/p2mr_v1_oracle/src/: corpus.rs  encoding.rs  main.rs  p2mr.rs  report.rs  script.rs  transaction.rs
depends/: Makefile  README.md  description.md  gen_id  toolchain.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  README.md  release-notes-0.1.0-testnet4.md  release-notes-0.1.2-testnet4.md  release-notes-1.0.0.md  release-notes-102.md  release-notes-128.md  release-notes-132.md  release-notes-95.md  release-trust-0.1.1-testnet4.md  release-trust-0.1.2-testnet4.md  release-trust-1.0.0.md
doc/consensus/: README.md  p2mr-v1.md
doc/deployment/: init.md
doc/design/: libraries.md  p2mr-datapqchash.md
doc/development/: developer-notes.md  fuzzing.md  productivity.md  public-branch-and-rulesets.md
doc/integration/: JSON-RPC-interface.md  README.md  exchange-integrator-quickstart.md  mining-pool-quickstart.md  multiprocess.md  p2mr-v1-support-matrix.json  p2mr-v1-support-matrix.md  rpc-delta-reference.md  zmq.md
doc/man/: qbit-cli.1  qbit-qt.1  qbit-tx.1  qbit-util.1  qbit-wallet.1  qbit.1  qbitd.1
doc/performance/: benchmarking.md  rpc-benchmarking.md  tracing.md
doc/performance/baselines/ibd/: README.md  index.json
doc/performance/baselines/rpc/: README.md
doc/policy/: README.md  mempool-limits.md  mempool-replacements.md  packages.md
doc/reference/: README.md  ctv.md  future-block-time-v2.md  p2mr-validation-weight-v2.md  p2p-bad-ports.md
doc/release/: README.md  guix.md  release-process.md
doc/release/examples/: p2mr-v1-conformance-evidence.json
doc/rpc/: build_site.py  mkdocs.base.yml  site_builder.py
doc/rpc/annotations/: v30.2-delta.yml
doc/rpc/assets/: rpcdocs.css  rpcdocs.js
doc/rpc/baselines/v30.2/: rpc-docs-build-meta.json  rpc-docs.json
doc/rpc/contracts/: manifest-v1.md  overlay-v1.md  site-model-v1.md
doc/rpc/fixtures/: rpc-docs-v1.sample.json  site-model-v1.sample.json  v30.2-delta-v1.sample.yml
doc/subtrees/: libbitcoinpqc.md
doc/user/: README.md  bitcoin-core-differences.md  full-validation-bootstrap.md  getting-started.md  public-testnet.md  run-node.md
doc/user/network/: i2p.md  tor.md
doc/user/setup/: bitcoin-conf.md  files.md
doc/user/wallet/: descriptors.md  managing-wallets.md  p2mr-multisig.md  p2mr-pubkeydb.md  p2mr-wallets.md  psbt.md
share/: setup.nsi.in
src/: CMakeLists.txt  addrdb.h  addresstype.cpp  addresstype.h  addrman.h  addrman_impl.h  arith_uint256.h  attributes.h  auxpow.cpp  auxpow.h  auxpow_validation.cpp  banman.h  base58.h  bech32.h  bip324.h  bitcoin-chainstate.cpp  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-res.rc  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoin.cpp  bitcoind-res.rc  bitcoind.cpp  blockencodings.h  blockfilter.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  clientversion.h  (+80 more)
src/qt/test/: CMakeLists.txt  addressbooktests.cpp  addressbooktests.h  apptests.cpp  apptests.h  clientmodeltests.cpp  clientmodeltests.h  modaloverlaytests.cpp  modaloverlaytests.h  optiontests.cpp  optiontests.h  psbtoperationsdialogtests.cpp  psbtoperationsdialogtests.h  rpcnestedtests.cpp  rpcnestedtests.h  syntheticwallet.cpp  syntheticwallet.h  test_main.cpp  uritests.cpp  uritests.h  util.h  walletactivitytests.cpp  walletactivitytests.h  walletcontrollertests.cpp  walletcontrollertests.h  wallettests.cpp  wallettests.h
test/: README.md
(+1057 files in other folders)
