[package]
name = "p2mr-v1-oracle"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
publish = false

[dependencies]
bitcoinpqc = { package = "qbit-libbitcoinpqc", path = "../../../src/libbitcoinpqc" }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
